Fix image alignment on EuiEmptyPrompt
- max width is causing the figure to not be centered - we should set horizontal margins to `auto` if EuiEmptyPrompt is setting a custom max-width

--- a/src/components/empty_prompt/_empty_prompt.scss
+++ b/src/components/empty_prompt/_empty_prompt.scss
@@ -12,6 +12,7 @@
     > * {
       flex-shrink: 1;
       max-width: convertToRem(360px);
+      margin-inline: auto;
     }
   }
 
